--- a/src/CSS/ingame.css
+++ b/src/CSS/ingame.css
@@ -1,6 +1,7 @@
 .ingame{
   width:100%;
-  
+  height: 100%;
+
   background-color: #9caa84;
   text-align: center;  
 }
@@ -9,43 +10,37 @@
   justify-content: center;
   align-items: center;
 
-  width:100%;
-  height: auto;
+  width: 100%;
 
   background-color: #9caa84;
   object-fit: fill;
-
-  padding: 50px;
 }
 
 .cellGrid{
-  width: 50%;
-  height: 600px;
+  width: min(30vw, 300px);
+  height: min(60vw, 600px);
+
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(20, 1fr);
-  /* place-items: center; */
 
-  gap: 1px;
   margin-left: 0px;
-
-  /* background-color:black; */
 }
 
 .none{
   display: grid;
-  place-items: center;
-  background-color:lightblue;
+  background: url('../../assets/empty.png');
+  background-size: cover;
 }
 
 .block{
   display: grid;
-  place-items: center;
-  background-color:indianred;
+  background: url('../../assets/empty.png');
+  background-size: cover;
 }
 
 .my{
   display: grid;
-  place-items: center;
-  background-color:yellowgreen;
+  background: url('../../assets/fill.png');
+  background-size: cover;
 }
