game board 추가 및 text 반응형 구현

--- a/src/CSS/ingame.css
+++ b/src/CSS/ingame.css
@@ -1,46 +1,89 @@
-.ingame{
-  width:100%;
-  height: 100%;
-
-  background-color: #9caa84;
-  text-align: center;  
-}
-.board{
+.board {
   display: flex;
   justify-content: center;
   align-items: center;
 
   width: 100%;
 
-  background-color: #9caa84;
+  /* background-color: #9caa84; */
+  background-color: #cccccc;
   object-fit: fill;
 }
 
-.cellGrid{
-  width: min(30vw, 300px);
-  height: min(60vw, 600px);
+.game_board {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: min(80vw, 800px);
+  height: min(58vw, 580px);
+
+  background-image: url("../../assets/board.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+
+  /* object-fit: fill; */
+}
+
+.game_screen {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  width: min(35vw, 350px);
+  height: min(43vw, 430px);
+  background-color: #9caa84;
+
+  box-shadow: inset 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+}
+
+.cellGrid {
+  width: min(20vw, 200px);
+  height: min(40vw, 400px);
 
   display: grid;
   grid-template-columns: repeat(10, 1fr);
   grid-template-rows: repeat(20, 1fr);
 
-  margin-left: 0px;
+  margin: 5px 5px 5px 5px;
+  padding: 0px;
+  outline: 1px solid black;
 }
 
-.none{
+.game_info {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+
+  width: min(12vw, 120px);
+  height: min(40vw, 400px);
+
+  font-size: 1.2rem;
+
+  /* background-color: #ff00ff; */
+  background-color: #9caa84;
+}
+
+.game_info > p {
+  font-size: clamp(0.6rem, 2vw, 1rem);
+}
+
+.none {
   display: grid;
-  background: url('../../assets/empty.png');
+  background: url("../../assets/empty.png");
   background-size: cover;
 }
 
-.block{
+.block {
   display: grid;
-  background: url('../../assets/fill.png');
+  background: url("../../assets/fill.png");
   background-size: cover;
 }
 
-.my{
+.my {
   display: grid;
-  background: url('../../assets/fill.png');
+  background: url("../../assets/fill.png");
   background-size: cover;
 }
