--- a/src/CSS/ingame.css
+++ b/src/CSS/ingame.css
@@ -43,11 +43,13 @@
   position: absolute;
   background-color: #9caa84;
 
-  width: min(33vw, 330px);
+  width: min(28vw, 280px);
 
-  font-family: "Lato", sans-serif;
+  font-family: "Silkscreen", sans-serif;
   font-size: clamp(1.2rem, 4vw, 2rem);
   text-align: center;
+
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
 .cellGrid {
@@ -87,7 +89,7 @@
 }
 
 .game_info > section > article {
-  font-family: "Lato", sans-serif;
+  font-family: "Silkscreen", sans-serif;
 
   width: 100%;
   left: 0;
