--- a/src/CSS/ingame.css
+++ b/src/CSS/ingame.css
@@ -11,6 +11,21 @@
   object-fit: fill;
 }
 
+.background {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+}
+
+.background_image {
+  position: absolute;
+  width: min(5vw, 50px);
+  height: min(5vw, 50px);
+  opacity: 0.08;
+
+  background-size: cover;
+}
+
 .game_board {
   display: flex;
   justify-content: center;
@@ -23,6 +38,8 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
+
+  z-index: 1;
 }
 
 .game_screen {
@@ -122,14 +139,15 @@
   gap: 1px;
 }
 
-.number_group > * {
+.number_group > .number_image {
   display: flex;
 
   width: min(1.5vw, 15px);
   height: min(3vw, 30px);
 
-  background: url("../../assets/2.png");
+  background-image: url("../../public/images/none.png");
   background-size: cover;
+  border: 0px;
 }
 
 .next_block_container {
